# gcpsecrets

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
gcpsecrets/: __init__.py  gcpdrcrets.py
tests/: conftest.py  test_basic.py  test_concrete.py  test_empty.py  test_implementation.py  test_values.py
