[project]
name = "gcpsecrets"
version = "0.1.0"
description = "Package to access GCP Secrets through Dictionary interface"
authors = [
    {name = "Boris Tvaroska", email = "tvaroska@google.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-cloud-secret-manager>=2.16.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "pre-commit>=3.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "gcpsecrets"
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    "ignore::DeprecationWarning:google.rpc",
]